--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,9 +7,7 @@
       <th>Pageable</th>
       <th>Pageable type</th>
       <th>Subject</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      
     </tr>
   </thead>
 
@@ -19,10 +17,9 @@
         <td><%= page.sequence_id %></td>
         <td><%= page.pageable_id %></td>
         <td><%= page.pageable_type %></td>
-        <td><%= page.subject %></td>
+        <td><%= page.subject.name %></td>
         <td><%= link_to 'Show', page %></td>
-        <td><%= link_to 'Edit', edit_page_path(page) %></td>
-        <td><%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+       
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +27,3 @@
 
 <br>
 
-<%= link_to 'New Page', new_page_path %>
