--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -14,19 +14,22 @@
 
 
   <tbody>
- 
+
     <% @pages.each do |page| %>
       <tr>
         <td><%= page.sequence_id %></td>
         <td><%= page.pageable_id %></td>
         <td><%= page.pageable_type %></td>
         <td><%= page.subject.name %></td>
-        
+       
+        <td><%= link_to "Show" , admin_subject_page_path(@pageable, page) %></td>
+        <td><%= link_to "Edit", edit_admin_subject_page_path(@pageable, page) %></td>
+        <td><%= link_to "Delete", admin_subject_page_path(@pageable, page) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
+<%= link_to "New Page", [:new, @pageable, :page] %> 
 
