--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -26,6 +26,6 @@
 </p>
 
 <p>
-  <strong>Answer:</strong>
-  <%= @page.pageable.answers %>
+  <strong>Correct Answer:</strong>
+  <%= @page.pageable.correct_answer %>
 </p>
