On subject show view, add Add Question page and Add Instruction page. Attempt to create page through creating question/comment

--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -31,5 +31,8 @@
 </table>
 
 <br>
-<%= link_to "New Page", new_admin_subject_page_path%> 
+<%= link_to "New Question Page", new_admin_subject_question_path%> 
+
+<%= link_to "New Instruction Page", new_admin_subject_instruction_path
+%> 
 
