--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -40,5 +40,5 @@
 
 
 <%= link_to "Edit", edit_admin_subject_page_path(@pageable, :page) %> 
-<%= link_to "Delete" , admin_subject_pages_path(@pageable, :page) %> 
+<%#= link_to "Delete" , admin_subject_pages_path(@pageable, :subject, :page) %> 
 <%= link_to "Back", admin_subject_pages_path(@page.subject_id) %> 
