--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @pageable, @question ] do |f| %>
+<%= form_for [:admin, @subject, @question ] do |f| %>
   <% if @question.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@question.errors.count, "error") %> prohibited this question from being saved:</h2>
@@ -15,6 +15,8 @@
     <%= f.label :body %><br>
     <%= f.text_area :body %>
   </div> 
+ 
+   
   <div class="field">
     <%= f.label :choices %><br>
     <%= f.text_field :choices %>
