--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -22,6 +22,9 @@
         <td><%= page.pageable_type %></td>
         <td><%= page.subject.name %></td>
        
+       <% if page.pageable_type == "Question" %>
+        <td><%= link_to "Update" , new_admin_subject_page_question_path(@pageable, page) %></td>
+        <% end %>
         <td><%= link_to "Show" , admin_subject_page_path(@pageable, page) %></td>
         <td><%= link_to "Edit", edit_admin_subject_page_path(@pageable, page) %></td>
         <td><%= link_to "Delete", admin_subject_page_path(@pageable, page) %></td>
