--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @pageable, @page] do |f| %>
+<%= form_for [:admin, @subject, @page] do |f| %>
   <% if @page.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@page.errors.count, "error") %> prohibited this page from being saved:</h2>
@@ -17,7 +17,8 @@
   </div> 
   <div class="field">
     <%= f.label :pageable_type %><br>
-    <%= f.collection_select(:pageable_id, Page.all.select("DISTINCT(pageable_type)"), :id, :pageable_type) %>
+    <%#= f.collection_select(:pageable_id, Page.all.select("DISTINCT(pageable_type)"), :id, :pageable_type) %>
+    <%= f.text_field :pageable_type %>
   </div>
 
   <div class="actions">
