Add Create Instruction content link to form on pages index

--- a/app/views/admin/instructions/index.html.erb
+++ b/app/views/admin/instructions/index.html.erb
@@ -15,9 +15,9 @@
       <tr>
         <td><%= instruction.body %></td>
         
-        <td><%= link_to 'Show', instruction %></td>
-        <td><%= link_to 'Edit', edit_instruction_path(instruction) %></td>
-        <td><%= link_to 'Destroy', instruction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', admin_subject_page_instruction_path(@subject, @page, @instruction)%></td>
+        <td><%#= link_to 'Edit', edit_instruction_path(@page, @instruction, instruction) %></td>
+        <td><%#= link_to 'Destroy', instruction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -25,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Instruction', new_instruction_path %>
+<%#= link_to 'New Instruction', new_admin_subject_page_instruction_path  %>
