--- a/app/views/admin/instructions/_form.html.erb
+++ b/app/views/admin/instructions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@instruction) do |f| %>
+<%= form_for [:admin, @subject, @page, @instruction] do |f| %>
   <% if @instruction.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@instruction.errors.count, "error") %> prohibited this instruction from being saved:</h2>
@@ -14,11 +14,8 @@
   <div class="field">
     <%= f.label :body %><br>
     <%= f.text_area :body %>
-  </div>
-  <div class="field">
-    <%= f.label :image %><br>
-    <%= f.text_area :image %>
-  </div>
+  </div> 
+
   <div class="actions">
     <%= f.submit %>
   </div>
