--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -23,7 +23,9 @@
         <td><%= page.subject.name %></td>
        
        <% if page.pageable_type == "Question" %>
-        <td><%= link_to "Update" , new_admin_subject_page_question_path(@subject, page) %></td>
+        <td><%= link_to "Add Question Content" , new_admin_subject_page_question_path(@subject, page) %></td>
+        <% elsif page.pageable_type == "Instruction" %>
+        <td><%= link_to "Add Instruction Content" , new_admin_subject_page_instruction_path(@subject, page) %></td>
         <% end %>
         <td><%= link_to "Show" , admin_subject_page_path(@subject, page) %></td>
         <td><%= link_to "Edit", edit_admin_subject_page_path(@subject, page) %></td>
