--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -7,6 +7,8 @@
       <th>Pageable</th>
       <th>Pageable type</th>
       <th>Subject</th>
+      <!-- Should add a snippet method to model -->
+      <th>Body</th>
       
     </tr>
   </thead>
@@ -21,6 +23,7 @@
         <td><%= page.pageable_id %></td>
         <td><%= page.pageable_type %></td>
         <td><%= page.subject.name %></td>
+        <td><%= page.pageable.body %></td>
        
        <% if page.pageable_type == "Question" %>
         <td><%= link_to "Add Question Content" , new_admin_subject_page_question_path(@subject, page) %></td>
