--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -34,6 +34,7 @@
         <td><%= link_to "Edit Question Content" , edit_admin_subject_page_question_path(@subject, page, page.pageable.id) %></td>
         <% elsif page.pageable_type == "Instruction" %>
         <td><%= link_to "Add Instruction Content" , new_admin_subject_page_instruction_path(@subject, page) %></td>
+        <td><%= link_to "Edit Instruction Content" , edit_admin_subject_page_instruction_path(@subject, page, page.pageable.id) %></td>
         <% end %>
         <td><%= link_to "Show" , admin_subject_page_path(@subject, page) %></td>
         <td><%= link_to "Edit", edit_admin_subject_page_path(@subject, page) %></td>
