--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -11,7 +11,7 @@
     </tr>
   </thead>
 
-
+<p> <%#= @pages.pageable %> </p>
 
   <tbody>
 
@@ -21,10 +21,15 @@
         <td><%= page.pageable_id %></td>
         <td><%= page.pageable_type %></td>
         <td><%= page.subject.name %></td>
+        <% if page.pageable %>
+          <td><%= page.pageable.body %></td>
+        <% else %>
+          <td><%= "Please add content" %></td>
+       <% end %>
        
-        <td><%= link_to "Show" , admin_subject_page_path(@pageable, page) %></td>
-        <td><%= link_to "Edit", edit_admin_subject_page_path(@pageable, page) %></td>
-        <td><%= link_to "Delete", admin_subject_page_path(@pageable, page) %></td>
+        <td><%= link_to "Show" , admin_subject_page_path(@subject, page) %></td>
+        <td><%= link_to "Edit", edit_admin_subject_page_path(@subject, page) %></td>
+        <td><%= link_to "Delete", admin_subject_page_path(@subject, page) %></td>
       </tr>
     <% end %>
   </tbody>
