Update Page show and edit. Edit only allows you to update page sequence.

--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -15,10 +15,10 @@
     <%= f.label :sequence_id %><br>
     <%= f.number_field :sequence_id %>
   </div> 
-  <div class="field">
-    <%= f.label :pageable_type %><br>
-    <%= f.collection_select(:pageable_id, Page.all.select("DISTINCT(pageable_type)"), :id, :pageable_type) %>
-  </div>
+  <!-- <div class="field">
+    <%#= f.label :pageable_type %><br>
+    <%#= f.collection_select(:pageable_id, Page.all.select("DISTINCT(pageable_type)"), :id, :pageable_type) %>
+  </div> -->
 
   <div class="actions">
     <%= f.submit %>
