--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -7,6 +7,7 @@
       <th>Pageable</th>
       <th>Pageable type</th>
       <th>Subject</th>
+      <th>Body</th>
       
     </tr>
   </thead>
@@ -27,9 +28,9 @@
           <td><%= "Please add content" %></td>
        <% end %>
        
-        <td><%= link_to "Show" , admin_subject_page_path(@subject, page) %></td>
-        <td><%= link_to "Edit", edit_admin_subject_page_path(@subject, page) %></td>
-        <td><%= link_to "Delete", admin_subject_page_path(@subject, page) %></td>
+        <td><%= link_to "Show Page" , admin_subject_page_path(@subject, page) %></td>
+        <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
+        <td><%= link_to "Delete Page", admin_subject_page_path(@subject, page) %></td>
       </tr>
     <% end %>
   </tbody>
