--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -30,7 +30,8 @@
        
         <td><%= link_to "Show Page" , admin_subject_page_path(@subject, page) %></td>
         <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
-        <td><%= link_to "Delete Page", admin_subject_page_path(@subject, page) %></td>
+    
+        <td><%= link_to 'Destroy', admin_subject_page_path(@subject, page), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
