--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,24 @@
 
   <body>
 
+    <% if user_signed_in? %>
+  
+    <%= link_to 'My Account', admin_url(current_admin.id) %>
+    <%= link_to 'Edit Profile', edit_admin_registration_path %>
+    <%= link_to "Sign out", destroy_admin_session_path, method: :delete %>
+    
+    <% else %>
+
+    <%= link_to "Sign up", new_admin_registration_path %>
+    <%= link_to "Sign in", new_admin_session_path %>
+
+    <% end %>
+
+
+
+
+
+
     <p class="notice">
       <%= notice unless notice.blank? %>
     </p>
