--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,28 +18,20 @@
 
   	<%= stylesheet_link_tag    "application" %>
   	<%= javascript_include_tag "vendor/custom.modernizr" %>
+    <%= javascript_include_tag "application"%>
     <%= csrf_meta_tags %>
   </head>
 
   <body>
-
-    <% if user_signed_in? %>
-  
-    <%= link_to 'My Account', admin_url(current_admin.id) %>
-    <%= link_to 'Edit Profile', edit_admin_registration_path %>
-    <%= link_to "Sign out", destroy_admin_session_path, method: :delete %>
-    
-    <% else %>
-
-    <%= link_to "Sign up", new_admin_registration_path %>
-    <%= link_to "Sign in", new_admin_session_path %>
-
-    <% end %>
-
-
-
-
-
+    <div id="user_nav">
+      <% if admin_signed_in? %>
+      <%= link_to 'Edit Profile', edit_admin_registration_path %>
+      <%= link_to "Sign out", destroy_admin_session_path, method: :delete %> 
+      <% else %>
+      <%= link_to "Sign up", new_admin_registration_path %>
+      <%= link_to "Sign in", new_admin_session_path %>
+      <% end %>
+    </div>
 
     <p class="notice">
       <%= notice unless notice.blank? %>
