--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -52,9 +52,12 @@
   </p>
 
 <% end %>
+  <% if @page.pageable_type == "Question" %>
+          <td><%= link_to "Show Question" , edit_admin_subject_question_path(@subject, @question) %></td>
+        <% elsif @page.pageable_type == "Instruction" %>
+          <td><%= link_to "Show Instruction" , edit_admin_subject_instruction_path(@subject, @question) %></td>
+        <% end %>
 
-
-
-<%= link_to "Edit", edit_admin_subject_page_path(@pageable, :page) %> 
+<%= link_to "Edit Page", edit_admin_subject_page_path(@subject, :page) %> 
 <%#= link_to "Delete" , admin_subject_pages_path(@pageable, :subject, :page) %> 
 <%= link_to "Back", admin_subject_pages_path(@page.subject_id) %> 
