--- a/app/views/admin/instructions/edit.html.erb
+++ b/app/views/admin/instructions/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', admin_subject_question_path(@subject, @instruction) %> |
-<%#= link_to 'Back', instructions_path %>
+<td><%= link_to "Back" , admin_subject_page_path(@subject, @page) %></td>
