--- a/app/views/admin/subjects/edit.html.erb
+++ b/app/views/admin/subjects/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @subject %> |
-<%= link_to 'Back', subjects_path %>
+
+<%= link_to 'Back', admin_subjects_path %>
