--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -19,11 +19,8 @@
 	
   <p>
     <strong>Body:</strong>
-  <% if @pageable == nil %>
-      <p> No content </p>
-    <% else %>
-      <%= @pageable.body %>
-    <% end %>
+    <td><%= show_body %></td>
+
   </p>
   <p>
     <strong>Choices:</strong>
@@ -50,13 +47,13 @@
       <%= @pageable.body %>
     <% end %>
   </p>
-
 <% end %>
-  <% if @page.pageable_type == "Question" %>
-          <td><%= link_to "Edit Question Content" , edit_admin_subject_question_path(@subject, @question) %></td>
-        <% elsif @page.pageable_type == "Instruction" %>
-          <td><%= link_to "Edit Instruction Content" , edit_admin_subject_instruction_path(@subject, @question) %></td>
-        <% end %>
+  
+<% if @page.pageable_type == "Question" %>
+    <td><%= link_to "Edit Question Content" , edit_admin_subject_question_path(@subject, @question) %></td>
+<% elsif @page.pageable_type == "Instruction" %>
+    <td><%= link_to "Edit Instruction Content" , edit_admin_subject_instruction_path(@subject, @question) %></td>
+<% end %>
 
 
 <%#= link_to "Delete" , admin_subject_pages_path(@pageable, :subject, :page) %> 
