--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -22,16 +22,16 @@
         <td><%= page.pageable_id %></td>
         <td><%= page.pageable_type %></td>
         <td><%= page.subject.name %></td>
-        <% if page.pageable %>
-          <td><%= page.pageable.body %></td>
-        <% else %>
+        <% if page.pageable.body.empty? %>
           <td><%= "Please add content" %></td>
-        <% end %>
+        <% else %>
+          <td><%= page.pageable.body %></td> 
+        <% end %> 
         <td><%= link_to "Show Page" , admin_subject_page_path(@subject, page) %></td>
         <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
         <td><%= link_to 'Destroy', admin_subject_page_path(@subject, page), method: :delete %></td>
         
-       
+
       
 
 
