update views for user to start lesson

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,5 @@
 <p id="notice"><%= notice %></p>
-
-<p>Hello</p>
+<%= @question.body %>
+<%= @question.choices %>
+<%= @question.correct_answer %>
+<%= @question.explanation %>
