--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,13 +24,14 @@
 
   <body>
     <div id="user_nav">
-      <% if admin_signed_in? %>
-      Hello <strong><%= current_admin.name %></strong>
-      <%= link_to 'Edit Profile', edit_admin_registration_path %>
-      <%= link_to "Sign out", destroy_admin_session_path, method: :delete %> 
+      
+      <% if current_user.try(:admin?) %>
+      Hello <strong><%= current_user.name %></strong>
+      <%= link_to 'Edit Profile', edit_user_registration_path %>
+      <%= link_to "Sign out", destroy_user_session_path, method: :delete %> 
       <% else %>
-      <%= link_to "Sign up", new_admin_registration_path %>
-      <%= link_to "Sign in", new_admin_session_path %>
+      <%= link_to "Sign up", new_user_registration_path %>
+      <%= link_to "Sign in", new_user_session_path %>
       <% end %>
     </div>
 
