serialize arrays working for question controller

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,3 +3,6 @@
 <%= @question.choices %>
 <%= @question.correct_answer %>
 <%= @question.explanation %>
+
+<%= test_helper %>
+<%# link_to 'Next', %>
