--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -17,8 +17,9 @@
   </div> 
    
   <div class="field">
-    <%= f.label :choices %><br>
-    <%= f.text_field :choices %>
+    
+    <%= f.label :text_choices, "Choices" %><br>
+    <%= f.text_area :text_choices %>
   </div>
   <div class="field">
     <%= f.label :correct_answer%><br>
