--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -19,23 +19,23 @@
 	
   <p>
     <strong>Body:</strong>
-    <td><%= show_body %></td>
+    <td><%= show_body(@pageable) %></td>
   </p>
 
   <p>
     <strong>Choices:</strong>
-    <td><%= show_choices %></td>
+    <td><%= show_choices(@pageable) %></td>
   </p>
 
 	<p>
     <strong>Correct Answer:</strong>
-    <td><%= show_correct_answer %></td>
+    <td><%= show_correct_answer(@pageable) %></td>
   </p>
   
   <p>
 <% elsif @page.pageable_type == "Instruction" %>
     <strong>Body:</strong>
-    <td><%= show_body %></td>
+    <td><%= show_body(@pageable) %></td>
   </p>
 <% end %>
   
