--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -14,12 +14,12 @@
       <tr>
         <td><%= subject.section %></td>
         <td><%= subject.name %></td>
-        <td><%= link_to 'Start Lesson', start_page(subject) %></td>
+        <td><%= link_to "Start Lesson", start_page(subject) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-<%= link_to 'Back', subjects_path %>
+<%# link_to 'Back', subjects_path %>
 
