--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@question) do |f| %>
+<%= form_for[ :user, @question] do |f| %>
   <% if @question.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@question.errors.count, "error") %> prohibited this question from being saved:</h2>
@@ -9,7 +9,18 @@
       <% end %>
       </ul>
     </div>
-  <% end %>
+  <% end %> 
+  
+  <div class="field">
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
+  </div> 
+
+   <div class="field">
+    <%= f.label :chocies %>
+    <%= f.radio_button :question, :choices, choices[0] %>
+    <%= f.radio_button :question, :choices, choices[1] %>    
+  </div>
 
   <div class="actions">
     <%= f.submit %>
