Fixes yml file (source of figaro error)

--- a/app/views/notifier/subscription_confirmation.html.haml
+++ b/app/views/notifier/subscription_confirmation.html.haml
@@ -1,3 +1,5 @@
 Notifier#subscription_confirmation
 
-= @greeting, find me in app/views/app/views/notifier/subscription_confirmation.text.erb
+= @greeting + ", find me in app/views/app/views/notifier/subscription_confirmation.html.haml"
+
+= "You are now signed up as a Prepify student user."
