update page controller

--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -22,7 +22,12 @@
         <td><%= page.pageable_id %></td>
         <td><%= page.pageable_type %></td>
         <td><%= page.subject.name %></td>
-        <td><%= show_body(page.pageable) %></td>
+       <!--  <td><%#= show_body(page.pageable) %></td> -->
+        <% if page.pageable %>
+          <td><%= page.pageable.body %></td>  
+        <% else %>
+          <td><%= "Please add content" %></td>
+        <% end %> 
         <td><%= link_to "Show Page" , admin_subject_page_path(@subject, page) %></td>
         <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
         <td><%= link_to 'Destroy', admin_subject_page_path(@subject, page), method: :delete %></td>
