--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @subject, @question ] do |f| %>
+# <%= form_for [:admin, @subject, @question] do |f| %>
   <% if @question.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@question.errors.count, "error") %> prohibited this question from being saved:</h2>
@@ -15,7 +15,12 @@
     <%= f.label :body %><br>
     <%= f.text_area :body %>
   </div> 
-   
+  
+  <div class="field">
+    <%= f.label :image %><br>
+    <%= f.file_field :image %>
+  </div>
+  
   <div class="field">
     
     <%= f.label :text_choices, "Choices" %><br>
