--- a/app/views/admin/instructions/_form.html.erb
+++ b/app/views/admin/instructions/_form.html.erb
@@ -15,6 +15,12 @@
     <%= f.label :body %><br>
     <%= f.text_area :body %>
   </div>
+
+  <div class="field">
+    <%= f.label :image %><br>
+    <%= f.file_field :image %>
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
