--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -22,6 +22,10 @@
         <td><%= page.pageable_id %></td>
         <td><%= page.pageable_type %></td>
         <td><%= page.subject.name %></td>
+        <!--   <#% if page.pageable %>
+          <td><%#= page.pageable.body %></td>  
+        <#% else %>
+          <td><%#= "Please add content" %></td> -->
         <td><%= show_body(page.pageable) %></td>
         <td><%= link_to "Show Page" , admin_subject_page_path(@subject, page) %></td>
         <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
