Add Page Helper method so image_url shows on page Show view

--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -22,7 +22,10 @@
     <td><%= show_body(@pageable) %></td>
   </p>
 
- 
+  <p>
+    <strong>Image:</strong>
+    <td><%= show_image(@pageable) %></td>
+  </p>
 
   <p>
     <strong>Choices:</strong>
