Add image tag to Page helper so image is rendered in view

--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -24,7 +24,7 @@
 
   <p>
     <strong>Image:</strong>
-    <td><%= show_image(@pageable) %></td>
+    <td><%= image_tag show_image(@pageable) %></td>
   </p>
 
   <p>
