--- a/app/views/instructions/show.html.erb
+++ b/app/views/instructions/show.html.erb
@@ -4,7 +4,5 @@
   <strong>Body:</strong>
   <%= @instruction.body %>
 </p>
+<%= link_to "Next Page", next_page(@instruction.page) %>
 
-
-<%= link_to 'Edit', edit_instruction_path(@instruction) %> |
-<%= link_to 'Back', instructions_path %>
