added image to instruc

--- a/app/views/instructions/show.html.erb
+++ b/app/views/instructions/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <strong>Body:</strong>
   <%= @instruction.body %>
+  <img src="<%= @instruction.image %>">
 </p>
 <%= link_to "Next Page", next_page(@instruction.page) %>
 
