update for merge

--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -46,3 +46,8 @@
 <%= link_to "New Instruction Page", new_admin_subject_instruction_path
 %> 
 
+<%= link_to "Back to Subject Page", new_admin_subject_instruction_path
+%> 
+
+
+
