Change Back link on Pages index to direct to Subject index- admin

--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -46,7 +46,7 @@
 <%= link_to "New Instruction Page", new_admin_subject_instruction_path
 %> 
 
-<%= link_to "Back to Subject Page", new_admin_subject_instruction_path
+<%= link_to "Back to Subject Page", admin_subjects_path
 %> 
 
 
