create and update courses in helper methods

--- a/app/views/course_progressions/index.html.erb
+++ b/app/views/course_progressions/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing course_progressions</h1>
+<h1>Your Progress</h1>
 
 <table>
   <thead>
     <tr>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>Subject</th>
+      <th>Progress</th>
+      
     </tr>
   </thead>
 
