update routes so users can go through lessons

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -16,7 +16,7 @@
 </div>
 
 <div class="show" visibility: hidden>
-	<%= link_to "Next Page", next_page(@question.page)%>
+	<%= link_to "Next Page", next_page(@user, @question.page)%>
 </div>
 <div class="message">
 </div>
