course info is working when student goes through lesson

--- a/app/views/instructions/show.html.erb
+++ b/app/views/instructions/show.html.erb
@@ -5,5 +5,5 @@
   <%= @instruction.body %>
   <img src="<%= @instruction.image %>">
 </p>
-<%= link_to "Next Page", next_page(@instruction.page) %>
+<%= link_to "Next Page", next_page(@user, @instruction.page) %>
 
