--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -10,12 +10,11 @@
   </thead>
 
   <tbody>
-    <% user = @user.id %>
     <% @subjects.each do |subject| %>
       <tr>
         <td><%= subject.section %></td>
         <td><%= subject.name %></td>
-        <td><%= link_to "Start Lesson", start_page(user, subject) %></td>
+        <td><%= link_to "Start Lesson", start_page(@user, subject) %></td>
       </tr>
     <% end %>
   </tbody>
