--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,40 @@
-<h2>Sign up</h2>
+<% content_for(:body_id, "registrations_new") %> 
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name, :autofocus => true %></div>
+<div class="row" id="top">
+  <div class="large-4 large-offset-8 columns">
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+    <h2>Sign up</h2>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+      <div><%= f.label :name %><br />
+      <%= f.text_field :name, :autofocus => true %></div>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+      <div><%= f.label :email %><br />
+      <%= f.email_field :email, :autofocus => true %></div>
 
-<%= render "devise/shared/links" %>
+      <div><%= f.label :password %><br />
+      <%= f.password_field :password %></div>
+
+      <div><%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation %></div>
+
+      <div><%= f.submit "Sign up" %></div>
+    <% end %>
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
+
+<div class="row bottom">
+  <div class="large-4 columns">
+    <p><%= image_tag("school_logo.gif")%></p>
+    Column 1
+  </div>
+  
+  <div class="large-4 columns">Column 2
+  </div>
+  <div class="large-4 columns">Column 3
+  </div>
+</div>
