--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= csrf_meta_tags %>
   </head>
 
-  <body>
+  <body id="<%= yield :body_id %>">
     <div id="user_nav">
       
       <% if current_user.try(:admin?) %>
