--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -22,7 +22,11 @@
   </div>
 
   <div class="field">
-    <%= f.label :text_choices, "Choices" %><br>
+    <%= f.label :text_choices, "a:" %><br>
+    <%= f.text_area :text_choices %>
+  </div>
+  <div class="field">
+    <%= f.label :text_choices, "b:" %><br>
     <%= f.text_area :text_choices %>
   </div>
   
