progress bars are rendering for all lesson pages for student views

--- a/app/views/instructions/show.html.erb
+++ b/app/views/instructions/show.html.erb
@@ -5,5 +5,16 @@
   <%= @instruction.body %>
   <img src="<%= @instruction.image %>">
 </p>
+<div class="progress">
+    <%#= progress_bar(<%= progess(@user, @question.page) %>
+</div>
+
+<script type="text/javascript">	
+$('.progress').progressbar({
+				value: <%= progress(@user, @instruction.page) %>
+			});
+</script>
 <%= link_to "Next Page", next_page(@user, @instruction.page) %>
+
+
 
