--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -3,10 +3,10 @@
 
 
 	#top {
-		background-image: image-url("School.jpg");
-		
+		background-image: url("school_logo.jpg");
+		background-repeat: no-repeat;
 		label {
-		color: #fff;
+		color: #000;
 		}
 	}
 
