--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,8 +2,8 @@
 
 
 <div class="row" id="top">
-  <div class="large-4 large-offset-8 columns">
 
+  <div class="large-4 large-offset-8 columns">
     <h2>Sign up</h2>
 
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
@@ -29,10 +29,10 @@
 
 <div class="row bottom">
   <div class="large-4 columns">
-    <p><%= image_tag("school_logo.gif")%></p>
+    <p><%= image_tag("school_logo.jpg")%></p>
     Column 1
   </div>
-  
+
   <div class="large-4 columns">Column 2
   </div>
   <div class="large-4 columns">Column 3
