--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,17 +23,37 @@
   </head>
 
   <body id="<%= yield :body_id %>">
-    <div id="user_nav">
-      
-      <% if current_user.try(:admin?) %>
-      Hello <strong><%= current_user.name %></strong>
-      <%= link_to 'Edit Profile', edit_user_registration_path %>
-      <%= link_to "Sign out", destroy_user_session_path, method: :delete %> 
-      <% else %>
-      <%= link_to "Sign up", new_user_registration_path %>
-      <%= link_to "Sign in", new_user_session_path %>
-      <% end %>
-    </div>
+    <nav class="top-bar">
+      <ul class="title-area">
+        <li class="name">
+        <% if current_user.try(:admin?) %>
+          <h1><strong><%= link_to "Hello #{current_user.name}", edit_user_registration_path%></strong>
+          </h1>
+        </li>
+      </ul>
+      <section class="top-bar-section">
+        <ul class="right">
+          <li class="divider"></li>
+          <li>
+            <%= link_to 'Edit Profile', edit_user_registration_path %>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <%= link_to "Sign out", destroy_user_session_path, method: :delete %> 
+          </li>
+        <% else %>
+          <li class="divider"></li>>
+          <li>
+            <%= link_to "Sign up", new_user_registration_path %>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <%= link_to "Sign in", new_user_session_path %>
+          </li>
+        <% end %>
+        </ul>
+      </section>
+    </nav>
 
     <p class="notice">
       <%= notice unless notice.blank? %>
