Fixed login navbar bug, a
'

--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -1,12 +1,23 @@
 #registrations_new {
 
+background-color: lighten(#338aaa, 50%);
+
+background-image: url("school_logo.jpg");
+background-repeat: no-repeat;
+background-size: auto 100%;
 
 
 	#top {
-		background-image: url("school_logo.jpg");
-		background-repeat: no-repeat;
+		
+		
+		h2 {
+			color: white;
+		}
+
+
 		label {
-		color: #000;
+		color: white;
+		font-size: 1.5em;
 		}
 	}
 
