--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,9 @@
 
 <div class="row" id="top">
 
-  <div class="large-4 large-offset-8 columns">
+  <div></div>
+
+  <div class="large-4 large-offset-9 columns">
     <h2>Sign up</h2>
 
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
@@ -23,7 +25,7 @@
 
       <div><%= f.submit "Sign up" %></div>
     <% end %>
-    <%= render "devise/shared/links" %>
+    <%#= render "devise/shared/links" %>
   </div>
 </div>
 
