Fixes login navbar bug, adds image styling to signup page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row" id="top">
 
-  <div></div>
+  <div>Hey</div>
 
   <div class="large-4 large-offset-9 columns">
     <h2>Sign up</h2>
