Adds subtitle and first letter styling

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,27 +3,32 @@
 
 <div class="row" id="top">
 
-  <div>Hey</div>
+  <div class="large-6 columns">
+    <%= image_tag("Prepify_logo.png", :class => "logo")%>
+    <br>
+    <br>
+    <p>"Free Interactive SAT Prep"</p>
+  </div>
 
-  <div class="large-4 large-offset-9 columns">
+  <div class="large-4 large-offset-2 columns">
     <h2>Sign up</h2>
 
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
       <div><%= f.label :name %><br />
-      <%= f.text_field :name, :autofocus => true %></div>
+      <%= f.text_field :name, :autofocus => true, class: "glowing-border" %></div>
 
       <div><%= f.label :email %><br />
-      <%= f.email_field :email, :autofocus => true %></div>
+      <%= f.email_field :email, :autofocus => true, class: "glowing-border" %></div>
 
       <div><%= f.label :password %><br />
-      <%= f.password_field :password %></div>
+      <%= f.password_field :password, class: "glowing-border" %></div>
 
       <div><%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation %></div>
+      <%= f.password_field :password_confirmation, class: "glowing-border" %></div>
 
-      <div><%= f.submit "Sign up" %></div>
+      <div class="signup"><%= f.submit "Sign up", class: "button radius" %></div>
     <% end %>
     <%#= render "devise/shared/links" %>
   </div>
@@ -31,12 +36,13 @@
 
 <div class="row bottom">
   <div class="large-4 columns">
-    <p><%= image_tag("school_logo.jpg")%></p>
-    Column 1
+    <p>Serious SAT test prep for all, open to anyone with the will to learn</p>
   </div>
 
-  <div class="large-4 columns">Column 2
+  <div class="large-4 columns">
+    <p>An interactive curriculum that teaches the zen of standardized testing</p>
   </div>
-  <div class="large-4 columns">Column 3
+  <div class="large-4 columns">
+    <p>Tests that adapt their difficulty to continually challenge and push your abilities</p>
   </div>
 </div>
