--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1284,13 +1284,13 @@ $topbar-input-height: 2.45em;
 // Set the link colors and styles for top-level nav
 
 // $topbar-link-color: #fff;
-// $topbar-link-color-hover: #fff;
-// $topbar-link-color-active: #fff;
+ $topbar-link-color-hover: white;
+ $topbar-link-color-active: white;
 // $topbar-link-weight: bold;
  $topbar-link-font-size: em-calc(23);
 // $topbar-link-hover-lightness: -30%; // Darken by 30%
-// $topbar-link-bg-hover: darken($topbar-bg-color, 3%);
-// $topbar-link-bg-active: darken($topbar-bg-color, 3%);
+ $topbar-link-bg-hover: darken($topbar-bg-color, 10%);
+ $topbar-link-bg-active: darken($topbar-bg-color, 10%);
 
 // $topbar-dropdown-label-color: #555;
 // $topbar-dropdown-label-text-transform: uppercase;
