--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -1,28 +1,69 @@
 #registrations_new {
+$prepifycolor: #338aaa;
+$darkcolor: darken($prepifycolor, 40%);
+$lightcolor: lighten($prepifycolor, 60%);
 
-background-color: lighten(#338aaa, 50%);
-
+background-color: lighten($prepifycolor, 50%);
 background-image: url("school_logo.jpg");
 background-repeat: no-repeat;
-background-size: auto 100%;
+background-size: 100% 100%;
 
 
 	#top {
 		
+		.glowing-border {
+    		border: 2px solid #dadada;
+    		border-radius: 7px;
+		}
+
+		.glowing-border:focus { 
+    		outline: none;
+    		border-color: #9ecaed;
+    		box-shadow: 0 0 20px #9ecaed;
+		}
 		
-		h2 {
-			color: white;
+		h2, label {
+			color: $lightcolor;
+			text-shadow:0px 0px 10px black;
+			font-family: 'Source Sans Pro', sans-serif;
 		}
 
 
 		label {
-		color: white;
-		font-size: 1.5em;
+			font-size: 1.20em;
 		}
+
+		p {
+			font-family: "Gochi Hand", cursive;
+			font-size: 2em;
+			color: white;
+			text-shadow:0px 0px 10px black;
+			text-align: center;
+		}
+
+
 	}
 
 	.bottom {
 		text-align: center;
+		background-color: $lightcolor;
+	
+		p {
+			font-family: 'Source Sans Pro', sans-serif;
+		}
+
+		p:first-letter {
+			font-size: 7em;
+			font-family: 'Karla', sans-serif;
+			font-weight: bold;
+			color: saturate($prepifycolor, 100%);
+			text-shadow: 3px 3px 5px $darkcolor;
+		}
+
+
+
+
+
 	}
 
 
