--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
   <head>
   	<meta charset="utf-8" />
 
+<!-- Google Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Gochi+Hand|Karla|Leckerli+One' rel='stylesheet' type='text/css'>
+
+
+
   	<!-- Uncomment to make IE8 render like IE7 -->
   	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
 
@@ -34,11 +39,9 @@
       </ul>
       <section class="top-bar-section">
         <ul class="right">
-          <li class="divider"></li>
           <li>
             <%= link_to 'Edit Profile', edit_user_registration_path %>
           </li>
-          <li class="divider"></li>
           <li>
             <%= link_to "Sign out", destroy_user_session_path, method: :delete %> 
           </li>
@@ -50,9 +53,7 @@
 
       <section class="top-bar-section">
         <ul class="right">
-          <li class="divider"></li>
           <li><%= link_to "Sign up", new_user_registration_path %></li>
-          <li class="divider"></li>
           <li><%= link_to "Sign in", new_user_session_path %></li>
         </ul>
       </section>
