Adds copy to three S A T column layout

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,14 +35,16 @@
 </div>
 
 <div class="row bottom">
-  <div class="large-4 columns">
-    <p>Serious SAT test prep for all, open to anyone with the will to learn</p>
-  </div>
+  <div class="transparent">
+    <div class="large-4 columns">
+      <p>Seriously free test prep, with no ads, books, or keys required</p>
+    </div>
 
-  <div class="large-4 columns">
-    <p>An interactive curriculum that teaches the zen of standardized testing</p>
-  </div>
-  <div class="large-4 columns">
-    <p>Tests that adapt their difficulty to continually challenge and push your abilities</p>
+    <div class="large-4 columns">
+      <p>An interactive curriculum connects you to top admissions officers across the country</p>
+    </div>
+    <div class="large-4 columns">
+      <p>Tests adapt their difficulty to continually challenge and push your abilities</p>
+    </div>
   </div>
 </div>
