--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -34,8 +34,8 @@ background-size: 100% 100%;
 		}
 
 		p {
-			font-family: "Gochi Hand", cursive;
-			font-size: 2em;
+			font-family: 'Leckerli One', cursive;
+			font-size: 2.25em;
 			color: white;
 			text-shadow:0px 0px 10px black;
 			text-align: center;
@@ -46,18 +46,24 @@ background-size: 100% 100%;
 
 	.bottom {
 		text-align: center;
-		background-color: $lightcolor;
-	
+
+		.transparent{
+			background:rgba(255,255,255,0.5);
+		}
+
 		p {
 			font-family: 'Source Sans Pro', sans-serif;
+			font-size: 1.25em;
+			color: white;
+			line-height: 2em;
+			text-shadow:0px 0px 10px black;
+
 		}
 
 		p:first-letter {
-			font-size: 7em;
-			font-family: 'Karla', sans-serif;
-			font-weight: bold;
-			color: saturate($prepifycolor, 100%);
-			text-shadow: 3px 3px 5px $darkcolor;
+			font-size: 3em;
+			font-family: 'Sansita One';  
+			text-shadow: 4px 4px 0 #566074, 7px 7px 0 #338aaa;
 		}
 
 
