--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -46,12 +46,13 @@ background-size: 100% 100%;
 
 	.bottom {
 		text-align: center;
-		background-color: $lightcolor;
 		border-top-left-radius: 20px;
 		border-top-right-radius: 20px;
+		background:rgba(51, 138, 170,0.2);
+
 
 		.transparent{
-			background:rgba(255,255,255,0.5);
+
 		}
 
 		p {
