--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -6,7 +6,7 @@ $lightcolor: lighten($prepifycolor, 20%);
 background-color: $prepifycolor;
 background-image: url("school_logo.jpg");
 background-repeat: no-repeat;
-background-size: 100% 100%;
+background-size: 100% auto;
 
 
 	#top {
