--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -41,7 +41,7 @@
     </div>
 
     <div class="large-4 columns">
-      <p>An interactive curriculum connects you to top admissions officers across the country</p>
+      <p>An interactive curriculum connects you to admissions officers from top schools</p>
     </div>
     <div class="large-4 columns">
       <p>Tests adapt their difficulty to continually challenge and push your abilities</p>
